fixed gap on landing page

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -27,7 +27,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 150px;
+    gap: 40px;
+    margin-top: 50px;
     max-width: 500px;
     text-align: center;
     height: 100vh;
@@ -35,9 +36,5 @@
   .text {
     padding: 0px 30px 0px 30px;
     display: flex;
-    margin-top: 50px;
-  }
-  .headline {
-    margin-bottom: 50px;
   }
 }
